svtools/source/contnr/treelistbox.cxx
@@ -701,7 +701,7 @@ void SvTreeListBox::ImplShowTargetEmphasis( SvTreeListEntry* pEntry, bool bShow)
         return;
     if ( !bShow && !(nImpFlags & SvTreeListBoxFlags::TARGEMPH_VIS) )
         return;
-    pImpl->PaintDDCursor( pEntry );
+    pImpl->PaintDDCursor( pEntry, bShow);
     if( bShow )
         nImpFlags |= SvTreeListBoxFlags::TARGEMPH_VIS;
     else
@@ -2657,7 +2657,6 @@ void SvTreeListBox::InvalidateEntry(SvTreeListEntry* pEntry)
 
 void SvTreeListBox::PaintEntry1(SvTreeListEntry& rEntry, long nLine, vcl::RenderContext& rRenderContext)
 {
-
     tools::Rectangle aRect; // multi purpose
 
     bool bHorSBar = pImpl->HasHorScrollBar();
@@ -2848,6 +2847,15 @@ void SvTreeListBox::PaintEntry1(SvTreeListEntry& rEntry, long nLine, vcl::Render
 
         nCurItem++;
         nCurTab++;
+    }
+
+    if (pViewDataEntry->IsDragTarget())
+    {
+        rRenderContext.Push();
+        rRenderContext.SetLineColor(rSettings.GetDeactiveColor());
+        rRenderContext.SetFillColor(rSettings.GetDeactiveColor());
+        rRenderContext.DrawRect(tools::Rectangle(Point(0, nLine + nTempEntryHeight - 2), Size(nWidth, 2)));
+        rRenderContext.Pop();
     }
 
     if (bCurFontIsSel)
